--- a/app/src/main/res/drawable/ic_chevron_down.xml
+++ b/app/src/main/res/drawable/ic_chevron_down.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:fillColor="#FFFFFFFF"
-      android:pathData="M9,16.2L4.8,12l-1.4,1.4L9,19,21,7l-1.4,-1.4z"/>
+    <path
+        android:fillColor="#FFFFFFFF"
+        android:pathData="M7,10l5,5l5,-5" />
 </vector>
