--- a/app/src/main/res/layout/row_divider.xml
+++ b/app/src/main/res/layout/row_divider.xml
@@ -2,6 +2,7 @@
 <View xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="1dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp"
-    android:background="?android:attr/listDivider" />
+    android:layout_marginTop="6dp"
+    android:layout_marginBottom="6dp"
+    android:background="@drawable/divider_soft"
+/>
