--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="grey">#ADA7A7</color>
-    <color name="grey_dark">#454444</color>
-    <color name="light_black">#6A463A</color>
+    <color name="bg">#0B0E12</color>
+    <color name="surface">#151A21</color>
+    <color name="surface_2">#12161C</color>
+    <color name="surface_3">#0E1217</color>
+    <color name="stroke">#2AFFFFFF</color>
+    <color name="text_primary">#EAF0FF</color>
+    <color name="text_secondary">#B8C1D6</color>
+    <color name="text_muted">#7F8AA3</color>
+    <color name="hint">#6E7A93</color>
+    <color name="fav_orange">#FF8A1A</color>
+    <color name="fav_orange_glow">#80FF8A1A</color>
+    <color name="black">#FF0E0F10</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="fav_pink">#FB4C8D</color>
-    <color name="fav_orange">#EF740E</color>
-    <color name="fav_orange_light">#EFB88C</color>
+    <color name="grey">#FF9AA3AD</color>
+    <color name="grey_dark">#FF2A2D31</color>
+    <color name="light_black">#FF14161A</color>
+    <color name="fav_orange_light">#FFFFB266</color>
+    <color name="fav_pink">#FFFB4C8D</color>
+    <color name="divider">#FF232831</color>
+    <color name="success">#FF4CAF7D</color>
+    <color name="error">#FFE15B5B</color>
+    <color name="accent_glow">#33FF8C1A</color>
+    <color name="accent_glow_soft">#1AFF8C1A</color>
+    <color name="input_bg">#FF121418</color>
+    <color name="ripple">#1AFFFFFF</color>
 </resources>
