--- a/app/src/main/res/layout/row_divider.xml
+++ b/app/src/main/res/layout/row_divider.xml
@@ -2,7 +2,7 @@
 <View xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="1dp"
-    android:layout_marginTop="6dp"
-    android:layout_marginBottom="6dp"
-    android:background="@drawable/divider_soft"
-/>
+    android:layout_marginStart="56dp"
+    android:layout_marginEnd="10dp"
+    android:alpha="0.22"
+    android:background="@color/text_dim" />
