--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,28 +3,44 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
+    android:layout_marginTop="30dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_screen">
 
-    <ImageView
-        android:id="@+id/avatar"
+    <FrameLayout
+        android:id="@+id/avatarWrap"
         android:layout_width="44dp"
         android:layout_height="44dp"
+        android:layout_marginTop="1dp"
         android:layout_marginStart="18dp"
-        android:layout_marginTop="16dp"
-        android:scaleType="centerCrop"
-        android:background="@drawable/bg_avatar_ring"
-        android:padding="2dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/avatar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_cat_avatar"
+            android:contentDescription="@string/app_name"
+            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Rustic.Circle" />
+
+        <ImageView
+            android:id="@+id/avatarRing"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/bg_avatar_ring"
+            android:contentDescription="@null" />
+
+    </FrameLayout>
 
     <Spinner
         android:id="@+id/langSpinner"
         style="@style/Widget.Rustic.Spinner"
         android:layout_width="86dp"
         android:layout_height="38dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
