--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -73,6 +73,11 @@
         <item name="android:scaleType">centerInside</item>
     </style>
 
+    <style name="ShapeAppearanceOverlay.Rustic.Circle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
+
     <!-- Text -->
     <style name="Text.Rustic.Body">
         <item name="android:textColor">@color/text</item>
