--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
-    android:layout_marginTop="30dp"
+    android:paddingBottom="16dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_screen">
@@ -24,7 +24,7 @@
             android:scaleType="centerCrop"
             android:src="@drawable/ic_cat_avatar"
             android:contentDescription="@string/app_name"
-            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Rustic.Circle" />
+            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay_Rustic_Circle" />
 
         <ImageView
             android:id="@+id/avatarRing"
@@ -53,7 +53,7 @@
         android:layout_marginTop="16dp"
         android:paddingStart="18dp"
         android:paddingEnd="18dp"
-        app:layout_constraintTop_toBottomOf="@id/avatar"
+        app:layout_constraintTop_toBottomOf="@id/avatarWrap"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
